--- a/Twitter-Sentiment-Analysis-for-CoinMarketCap.ipynb
+++ b/Twitter-Sentiment-Analysis-for-CoinMarketCap.ipynb
@@ -6,7 +6,20 @@
    "source": [
     "# Twitter Sentiment Analysis for Coinmarketcap\n",
     "\n",
-    "Get the top 10 cryptocurrencies with Coinmarketcap APIs and analyse the user sentiments with Twitter APIs. "
+    "Get the top 10 cryptocurrencies with Coinmarketcap APIs and analyse the user sentiments with Twitter APIs.\n",
+    "Therefore, we have 2 stepts:\n",
+    "1. Create a function to give you the list of Top10 cryptocurrencies from Coinmarketcap.\n",
+    "2. Create a procedure to get and analyse the sentiment 15 tweets for a cryptocurrency.\n",
+    "3. Use the above to analyse the sentiment for all Top10 cryptocurrencies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Get Top10 cryptocurrencies from Coinmarketcap\n",
+    "\n",
+    "We will use *urllib.request* to read the output of an URL and *json* to understand the API result from the URL."
    ]
   },
   {
@@ -15,96 +28,125 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries for Coinmarketcap\n",
-    "import urllib.request\n",
-    "import json, datetime"
+    "def GetTop10cryptos():\n",
+    "    # use APIs from coinmarketcap.com to get top10 cryptos (name and website_slug)\n",
+    "    # output: a list of pairs (name and website_slug) for each crypto\n",
+    "    \n",
+    "    # import libraries for Coinmarketcap\n",
+    "    import urllib.request # get the API result from URL\n",
+    "    import json           # handling of JSON API results\n",
+    "    \n",
+    "    # define the Coinmarketcap API URL for top 10 coins (\"limit=10\")\n",
+    "    url = \"https://api.coinmarketcap.com/v2/ticker/?limit=10\"\n",
+    "\n",
+    "    # open url and read as JSON format the output\n",
+    "    data = json.loads(urllib.request.urlopen(url).read()) # JSON  = dictionary\n",
+    "    \n",
+    "    # initialize an empty list with top crypto to search later in Twitter\n",
+    "    cryptos = []\n",
+    "\n",
+    "    # append only (names, website slug) for each crypto in top10\n",
+    "    for x, y in (data['data']).items():\n",
+    "        cryptos.append((y['name'], y['website_slug']))\n",
+    "    \n",
+    "    return cryptos # return list of pairs (name,website_slug) for each crypto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing the function: let's get the Top10 cryptos:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> Testing Coinmarketcap API - Top 10 cryptos:\n",
+      "Bitcoin  OR  bitcoin\n",
+      "Ethereum  OR  ethereum\n",
+      "XRP  OR  ripple\n",
+      "Bitcoin Cash  OR  bitcoin-cash\n",
+      "EOS  OR  eos\n",
+      "Stellar  OR  stellar\n",
+      "Litecoin  OR  litecoin\n",
+      "Cardano  OR  cardano\n",
+      "Tether  OR  tether\n",
+      "Monero  OR  monero\n"
+     ]
+    }
+   ],
    "source": [
-    "# get data from coinmarketcap for each coin\n",
-    "# define the Coinmarketcap API URL for top 10 coins\n",
-    "# https://api.coinmarketcap.com/v2/ticker/?limit=10\n",
-    "url = \"https://api.coinmarketcap.com/v2/ticker/?limit=10\"\n",
+    "print('-> Testing Coinmarketcap API - Top 10 cryptos:')\n",
+    "for crypto in GetTop10cryptos():\n",
+    "    print(crypto[0],' OR ' , crypto[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Get and analyse the sentiment 15 tweets for a crypto\n",
     "\n",
-    "# open Coinmarketcap url\n",
-    "page = urllib.request.urlopen(url)\n",
+    "You will use two packages:\n",
+    "* *tweepy* to receive tweets; you will need your API information (consumer key, consumer secret, access token and access secret) from your twitter developer account (https://developer.twitter.com/en/docs/basics/authentication/guides/access-tokens.html).\n",
+    "* *TextBlob* for sentiment analysis.\n",
     "\n",
-    "# read as JSON format the output\n",
-    "data = json.loads(page.read()) # get the API answer as JSON (dictionary)"
+    "Let's first design a procedure to save your twitter API data:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 10 cryptos:\n",
-      "Bitcoin | bitcoin\n",
-      "Ethereum | ethereum\n",
-      "XRP | ripple\n",
-      "Bitcoin Cash | bitcoin-cash\n",
-      "EOS | eos\n",
-      "Stellar | stellar\n",
-      "Litecoin | litecoin\n",
-      "Cardano | cardano\n",
-      "Tether | tether\n",
-      "Monero | monero\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create a list with top crypto to search later in Twitter\n",
-    "cryptos = []\n",
+    "def SaveTwitterCredentials(file2save):\n",
+    "    import json \n",
+    "    # Enter your keys/secrets as strings in the following fields\n",
+    "    credentials = {}  \n",
+    "    credentials['CONSUMER_KEY']    = 'YOUR DATA'  \n",
+    "    credentials['CONSUMER_SECRET'] = 'YOUR DATA'  \n",
+    "    credentials['ACCESS_TOKEN']    = 'YOUR DATA'  \n",
+    "    credentials['ACCESS_SECRET']   = 'YOUR DATA'\n",
     "\n",
-    "# append only the names and the website slug of each crypto\n",
-    "for x, y in (data['data']).items():\n",
-    "    cryptos.append((y['name'], y['website_slug']))\n",
-    "    \n",
-    "print('Top 10 cryptos:')\n",
-    "for crypto in cryptos:\n",
-    "    print(crypto[0],'|' , crypto[1])"
+    "    # Save the credentials object to file\n",
+    "    print('-> Saving twitter API credentials',file2save,'...')\n",
+    "    with open(file2save, \"w\") as file:  \n",
+    "        json.dump(credentials, file)\n",
+    "    print('Done!')\n",
+    "    return"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**HACK needed: tweepy will give you an error with some with python 3.7, so you need to repace 'async' variable with let's say 'tr_async' in \\Lib\\site-packages\\streaming.py!** (https://stackoverflow.com/questions/49339502/tweepy-on-macbook-pycharm-async-invalid-syntax)\n",
-    "\n",
-    "Thanks to the following projects:\n",
-    "* https://www.youtube.com/watch?v=o_OZdbCzHUA&index=2&list=PL2-dafEMk2A6QKz1mrk1uIGfHkC1zZ6UU\n",
-    "* https://github.com/llSourcell/twitter_sentiment_challenge/blob/master/demo.py\n",
-    "* https://stackabuse.com/accessing-the-twitter-api-with-python/\n",
-    "* https://github.com/shreyans29/thesemicolon/blob/master/livesenti.py\n",
-    "* https://www.youtube.com/watch?v=l9AC98amjSA\n",
-    "\n",
-    "Let's use **tweepy** library:"
+    "Saving credential for Twitter API:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> Saving twitter API credentials twitter_credentials.json ...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
-    "import tweepy\n",
-    "from textblob import TextBlob"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use your Twitter API keys and secrets for consumer and access (https://stackabuse.com/accessing-the-twitter-api-with-python/):"
+    "SaveTwitterCredentials(\"twitter_credentials.json\")"
    ]
   },
   {
@@ -113,120 +155,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter your keys/secrets as strings in the following fields\n",
-    "credentials = {}  \n",
-    "credentials['CONSUMER_KEY']    = 'YOUR DATA'  \n",
-    "credentials['CONSUMER_SECRET'] = 'YOUR DATA'  \n",
-    "credentials['ACCESS_TOKEN']    = 'YOUR DATA'  \n",
-    "credentials['ACCESS_SECRET']   = 'YOUR DATA'\n",
+    "def GetTweetSentiments(crypto,language='en'):\n",
+    "    # get tweets and analyse sentiment polarity and subjectivity for a specific language\n",
+    "    # INPUTS:\n",
+    "    # - crypto   = (name,website_slug) for a crypto\n",
+    "    # - language = en (default); if can be \"es\", etc.\n",
+    "    # OUTPUTS:\n",
+    "    # - (tweets mean polarity, tweets mean subjectivity)\n",
+    "    \n",
+    "    from twython import Twython\n",
+    "    from textblob import TextBlob\n",
+    "    import re, json\n",
+    "    import pandas as pd\n",
+    "    \n",
+    "    # Load credentials from json file\n",
+    "    with open(\"twitter_credentials.json\", \"r\") as file:  \n",
+    "        creds = json.load(file)\n",
     "\n",
-    "# Save the credentials object to file\n",
-    "with open(\"twitter_credentials.json\", \"w\") as file:  \n",
-    "    json.dump(credentials, file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## One call of tweets\n",
-    "\n",
-    "We will process only one time 15 tweets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the Twython class\n",
-    "from twython import Twython\n",
-    "import re\n",
-    "\n",
-    "# Load credentials from json file\n",
-    "with open(\"twitter_credentials.json\", \"r\") as file:  \n",
-    "    creds = json.load(file)\n",
-    "\n",
-    "# Instantiate an object\n",
-    "python_tweets = Twython(creds['CONSUMER_KEY'], creds['CONSUMER_SECRET'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Retrieve Tweets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-> Twitter sentiment analysis using only 15 tweets ...\n",
-      "2018-11-03 03:02:40.985836\n",
-      "                      crypto  polarity  subjectivity\n",
-      "4                    EOS-eos  0.500000      0.900000\n",
-      "8              Tether-tether  0.500000      0.900000\n",
-      "6          Litecoin-litecoin  0.137500      0.387500\n",
-      "1          Ethereum-ethereum  0.136364      0.454545\n",
-      "5            Stellar-stellar  0.100000      0.325000\n",
-      "0            Bitcoin-bitcoin  0.000000      1.000000\n",
-      "2                 XRP-ripple  0.000000      1.000000\n",
-      "3  Bitcoin Cash-bitcoin-cash  0.000000      0.000000\n",
-      "9              Monero-monero  0.000000      0.000000\n",
-      "7            Cardano-cardano       NaN           NaN\n",
-      "\n",
-      "* Max polarity:\n",
-      "crypto          EOS-eos\n",
-      "polarity            0.5\n",
-      "subjectivity        0.9\n",
-      "Name: 4, dtype: object\n",
-      "\n",
-      "* Max subjectivity:\n",
-      "crypto          Bitcoin-bitcoin\n",
-      "polarity                      0\n",
-      "subjectivity                  1\n",
-      "Name: 0, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import datetime\n",
-    "\n",
-    "print('-> Twitter sentiment analysis using only 15 tweets ...')\n",
-    "print(datetime.datetime.today())\n",
-    "# create a dataframe with the mean values\n",
-    "stats = []\n",
-    "\n",
-    "# analyse each crypto using one call of tweets\n",
-    "for crypto in cryptos:\n",
+    "    # Instantiate an object for tweets\n",
+    "    python_tweets = Twython(creds['CONSUMER_KEY'], creds['CONSUMER_SECRET'])\n",
     "    \n",
     "    # create search with 2 words: crypto name and website_slug\n",
     "    keywords = \" OR \".join(crypto)\n",
-    "    # print('* Tweets for ',keywords)\n",
     "    \n",
     "    # Create our query\n",
     "    query = {'q': keywords,  \n",
     "            'result_type': 'popular',\n",
-    "            #'count': 15,\n",
-    "            'lang': 'en',\n",
-    "            }\n",
+    "            'lang': language}\n",
     "\n",
     "    # create dictionary to retrive tweets info\n",
-    "    dict_ = {'crypto': [], 'date': [], 'text': [], 'polarity': [], 'subjectivity': [], }  \n",
+    "    dict_ = {'crypto': [], 'date': [], 'text': [], 'polarity': [], 'subjectivity': []}  \n",
     "    \n",
-    "    # Search tweets\n",
+    "    # Search tweets for the keywords and estimate sentiments\n",
+    "    # dict_ will will be filled with crypto, date, tweet text, \n",
+    "    # polarity and subjectivity for each tweet for a specific crypto\n",
+    "    \n",
     "    for status in python_tweets.search(**query)['statuses']:\n",
-    "        dict_['crypto'].append(keywords)      # type of crypto\n",
-    "        dict_['date'].append(status['created_at']) # date\n",
-    "        dict_['text'].append(status['text'])       # text of tweet\n",
+    "        dict_['crypto'].append(keywords)           # a crypto\n",
+    "        dict_['date'].append(status['created_at']) # tweet date\n",
+    "        dict_['text'].append(status['text'])       # tweet text\n",
     "        \n",
     "        # Perform Sentiment Analysis on Tweets\n",
     "        # ****************************************\n",
@@ -240,15 +207,123 @@
     "        dict_['polarity'] = sentiment.polarity         # evaluated polarity\n",
     "        dict_['subjectivity'] = sentiment.subjectivity # evaluated subjectivity\n",
     "\n",
-    "    # Structure data in a pandas DataFrame for easier manipulation for one coin\n",
-    "    df = pd.DataFrame(dict_)  \n",
-    "    mean_polarity = df.loc[:,\"polarity\"].mean()\n",
-    "    mean_subjectivity = df.loc[:,\"subjectivity\"].mean()\n",
+    "    # Structure data in a pandas DataFrame with the results\n",
+    "    df = pd.DataFrame(dict_)\n",
     "    \n",
-    "    # add the mean for each coint\n",
-    "    stats.append((crypto[0]+'-'+crypto[1],float(mean_polarity),float(mean_subjectivity)))\n",
+    "    # return (tweets mean polarity, tweets mean subjectivity)\n",
+    "    return (float(df.loc[:,\"polarity\"].mean()),float(df.loc[:,\"subjectivity\"].mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test out function with the 5th crypto in Top10:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Testing Twitter Sentiments:\n",
+      "-> Getting tweets and running sentiment analysis for ('EOS', 'eos')  ...\n",
+      "Polarity = -0.05833333333333334 Subjectivity = 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('* Testing Twitter Sentiments:')\n",
+    "crypto = GetTop10cryptos()[4]\n",
+    "print('-> Getting tweets and running sentiment analysis for',crypto,' ...')\n",
+    "pol, subj = GetTweetSentiments(crypto,language='en')\n",
+    "print('Polarity =', pol, 'Subjectivity =', subj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Entire code for Twiiter Analysis\n",
     "\n",
-    "# create a dataframe for the mean values\n",
+    "You will use the previous functions to evaluate tweet's sentiments:\n",
+    "* First run SaveTwitterCredentials(file2save) to save your credentials. \n",
+    "* Load the previous 2 functions: GetTop10cryptos() and GetTweetSentiments(crypto,language='en').\n",
+    "\n",
+    "Now you can run the full code for tweets sentiment analysis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> Twitter sentiment analysis using only 15 tweets ...\n",
+      "2018-11-03 21:14:00.584759\n",
+      "*  ('Bitcoin', 'bitcoin') ...\n",
+      "*  ('Ethereum', 'ethereum') ...\n",
+      "*  ('XRP', 'ripple') ...\n",
+      "*  ('Bitcoin Cash', 'bitcoin-cash') ...\n",
+      "*  ('EOS', 'eos') ...\n",
+      "*  ('Stellar', 'stellar') ...\n",
+      "*  ('Litecoin', 'litecoin') ...\n",
+      "*  ('Cardano', 'cardano') ...\n",
+      "*  ('Tether', 'tether') ...\n",
+      "*  ('Monero', 'monero') ...\n",
+      "                         crypto  polarity  subjectivity\n",
+      "3  Bitcoin Cash OR bitcoin-cash  0.250000      0.500000\n",
+      "1          Ethereum OR ethereum  0.200000      0.500000\n",
+      "6          Litecoin OR litecoin  0.137500      0.387500\n",
+      "0            Bitcoin OR bitcoin  0.000000      0.000000\n",
+      "2                 XRP OR ripple  0.000000      0.000000\n",
+      "8              Tether OR tether  0.000000      0.000000\n",
+      "9              Monero OR monero  0.000000      0.000000\n",
+      "4                    EOS OR eos -0.058333      0.500000\n",
+      "5            Stellar OR stellar -0.316667      0.422222\n",
+      "7            Cardano OR cardano       NaN           NaN\n",
+      "\n",
+      "* Max polarity:\n",
+      "crypto          Bitcoin Cash OR bitcoin-cash\n",
+      "polarity                                0.25\n",
+      "subjectivity                             0.5\n",
+      "Name: 3, dtype: object\n",
+      "\n",
+      "* Max subjectivity:\n",
+      "crypto          Bitcoin Cash OR bitcoin-cash\n",
+      "polarity                                0.25\n",
+      "subjectivity                             0.5\n",
+      "Name: 3, dtype: object\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import datetime\n",
+    "\n",
+    "print('=> Twitter sentiment analysis using only 15 tweets ...')\n",
+    "print(datetime.datetime.today()) # print datatime of analysis\n",
+    "\n",
+    "# create a list for statistics\n",
+    "stats = []\n",
+    "\n",
+    "# analyse each crypto in Top10\n",
+    "for crypto in GetTop10cryptos():\n",
+    "    print('* ', crypto, '...')\n",
+    "    # get mean polarity and subjectivity for a crypto (using only 15 tweets)\n",
+    "    pol, subj = GetTweetSentiments(crypto,language='en')\n",
+    "    # add them to stats\n",
+    "    stats.append((crypto[0]+' OR '+crypto[1], pol, subj))\n",
+    "\n",
+    "# create a dataframe for the mean values using the above list\n",
     "df_stats = pd.DataFrame(stats, columns=['crypto','polarity','subjectivity'])\n",
     "\n",
     "# Sort the results using polarity descending\n",
@@ -261,17 +336,31 @@
     "print(df_stats.loc[df_stats['polarity'].idxmax()])\n",
     "\n",
     "print('\\n* Max subjectivity:')\n",
-    "print(df_stats.loc[df_stats['subjectivity'].idxmax()])"
+    "print(df_stats.loc[df_stats['subjectivity'].idxmax()])\n",
+    "\n",
+    "print('Done!')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Acknowledgements\n",
+    "\n",
+    "* https://www.youtube.com/watch?v=o_OZdbCzHUA&index=2&list=PL2-dafEMk2A6QKz1mrk1uIGfHkC1zZ6UU\n",
+    "* https://github.com/llSourcell/twitter_sentiment_challenge/blob/master/demo.py\n",
+    "\n",
     "Have fun!\n",
     "\n",
     "2018@muntisa"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
