--- a/Twitter-Sentiment-Analysis-for-CoinMarketCap.ipynb
+++ b/Twitter-Sentiment-Analysis-for-CoinMarketCap.ipynb
@@ -347,8 +347,13 @@
    "source": [
     "## Acknowledgements\n",
     "\n",
+    "* https://stackabuse.com/accessing-the-twitter-api-with-python/\n",
     "* https://www.youtube.com/watch?v=o_OZdbCzHUA&index=2&list=PL2-dafEMk2A6QKz1mrk1uIGfHkC1zZ6UU\n",
     "* https://github.com/llSourcell/twitter_sentiment_challenge/blob/master/demo.py\n",
+    "\n",
+    "### Hack for tweepy\n",
+    "\n",
+    "If you decide to use *tweepy*, it will raise an error with python 3.7! So, you need to repace *async* variable with let's say *tr_async* in *\\Lib\\site-packages\\streaming.py* (https://stackoverflow.com/questions/49339502/tweepy-on-macbook-pycharm-async-invalid-syntax).\n",
     "\n",
     "Have fun!\n",
     "\n",
